Changed the naming of the classes by camelCasing